--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
   <head>
 
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600' rel='stylesheet' type='text/css' />
-    <link rel='stylesheet' href='/css/bootstrap.min.css' />
-    <link rel='stylesheet' href='/css/styles.css' />
+    <link rel='stylesheet' href='css/bootstrap.min.css' />
+    <link rel='stylesheet' href='css/styles.css' />
 
-    <script src='/libs/jquery-1.8.1.min.js'></script>
-    <script src='/libs/angular-1.0.1.min.js'></script>
-    <script src='/libs/bootstrap.min.js'></script>
+    <script src='libs/jquery-1.8.1.min.js'></script>
+    <script src='libs/angular-1.0.1.min.js'></script>
+    <script src='libs/bootstrap.min.js'></script>
 
-    <script src='/app.js'></script>
+    <script src='app.js'></script>
   </head>
 
   <body>
