--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <h2>Requirements</h2>
 
           <ul class='bundles row'>
-            <li class='span2' ng-repeat='bundle in bundles | orderBy:"order"'>
+            <li class='span2' ng-repeat='bundle in bundles'>
               <div ng-class='getClass(bundle)' class='bundle' popover='bundle' ng-click='select(bundle)'>
                 {{bundle.name}}
               </div>
@@ -45,7 +45,7 @@
 
         <div class='span6'>
           <h2>App.js</h2>
-          <pre ng-repeat='bundle in bundles | filter: { selected: true } | orderBy:"order"'>{{bundle.code}}</pre>
+          <pre ng-repeat='bundle in bundles | filter: { selected: true }'>{{bundle.code}}</pre>
         </div>
 
       </div>
