added footer and readme

--- a/index.html
+++ b/index.html
@@ -50,6 +50,12 @@
 
       </div>
 
+      <div class='footer row'>
+        <div class='span12'>
+          <a href='http://github.com/enome/application-generator'>fork me on github</a>
+        </div>
+      </div>
+
     </div>
 
   </body>
