what do you need instead of requirements

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
         <div class='span6'>
 
-          <h2>Requirements</h2>
+          <h2>What do you need?</h2>
 
           <ul class='bundles row'>
             <li class='span2' ng-repeat='bundle in bundles'>
