added a little intro

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       <div class='header row'>
         <div class='span12'>
           <h1>App.js Generator</h1>
+          <p>For more Express.js info take a look at <a href='http://expressjs.com'>expressjs.com</a> or the <a href='https://github.com/visionmedia/express/tree/master/examples'>examples directory</a> on github.</p>
         </div>
       </div>
 
